[package]
name = "oaclt"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.81.0"

[dependencies]
derive_more = "1.0.0"
duplicate = "2.0.0"
oaclt_macros = { path = "../oaclt_macros" }
thiserror = "1.0.64"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
]
