[package]
name = "oleclient"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.73.0"

[dependencies]
derive_more = "0.99.17"
duplicate = "1.0.0"
oleclient_macros = { path = "../oleclient_macros" }
thiserror = "1.0.49"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
]
